  _    _          _   _
 | |  | |        | | (_)              
 | |__| |   ___  | |  _    ___    ___
 |  __  |  / _ \ | | | |  / _ \  / __|
 | |  | | |  __/ | | | | | (_) | \__ \
 |_|  |_|  \___| |_| |_|  \___/  |___/


Ragnarok Emulator
Developers & Contributers
- RaX
- Aeomin
- Spre
- RabidCh

--------------------------------------------------------------------------------

- Rev 48 -
[2008/10/04] Aeomin - Added storage_id to accounts table.
-

- Rev 47 -
[2008/10/03] Tsusai - Account.sql - Typo correction in 46. Held shift down too long.
-

- Rev 46 -
[2008/10/03] Tsusai - Accounts.sql - Added passkey to accounts table for
 MD5 work (Core 565)
-

- Rev 45 -
[2008/09/29] Spre - Slight mobs.sql fixes,  DONOT use yet, mobs arent supported, 
		needs ID's etc that I dont have info on, which is why it is here now, for collaberative creation.
-

- Rev 44 -
[2008/09/28] Spre - Fixed game.sql and items.sql ALL item sql PLEASE in items.sql...
-

- Rev 43 -
[2008/09/28] Aeomin - Updated itemsdefinition table
-

- Rev 42 -
[2008/09/28] Aeomin - Update `items` table.
-

-Rev 41-
[2008/09/28] Spre - Modified sqlite game sql, added hotkey, where did it go?
-

-Rev 40-
[2008/09/23] Spre - Modified mobs.sql to conform with mobquery in the source
-

-Rev 39-
[2008/09/22] Spre - Modified Items.sql changed item_type to tinyint(1)
-

-Rev 38-
[2008/09/21] Spre - Fixed a tinyint booboo.
[2008/09/21] Spre - Moved someones development itemdef sql file to branches/SQL/MySQL. IT goes there :D
-

-Rev 37-
[2008/09/21] Spre - Added hotkey Table to mysql database.
-

-Rev 36-
[2008/09/21] Spre - Removed The .baks i left.
-

-Rev 35-
[2008/09/22] Spre - Updated SQLITE according to rax, specifications.
[2008/09/22] Spre - Fixed some changelog entries.
-

-Rev 34-
[2008/09/21] Spre - Removed my Mob sql in branches as it is nolonger needed.
-

-Rev 33-
[2008/09/21] Aeomin - Added my devlopment copy of itemdefinition
-

-Rev 32-