@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 49 -
+[2008/10/09] Spre - Removed Passkey from accounts.sql(Rev 46 Change).
+-
+
 - Rev 48 -
 [2008/10/04] Aeomin - Added storage_id to accounts table.
 -
